[tool.poetry]
name = "msconversaomoedas"
version = "0.1.0"
description = ""
authors = ["irineub <irineugmestre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
